--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.37",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0"
   },
   "devDependencies": {
+    "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.33",
     "babel-preset-es2015": "^6.16.0",
     "babel-register": "^6.16.3",
