--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@types/lodash": "^4.14.37",
     "body-parser": "^1.15.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "lodash": "^4.16.4"
   },
   "devDependencies": {
     "@types/body-parser": "0.0.33",
