--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@types/lodash": "^4.14.37",
     "body-parser": "^1.15.2",
+    "connect-slow": "^0.4.0",
     "express": "^4.14.0",
+    "fuse.js": "^2.5.0",
     "lodash": "^4.16.4"
   },
   "devDependencies": {
